@@ -12,9 +12,9 @@ describe "common_logger plugin" do
   it 'logs requests to given logger/stream' do
     cl_app(&:path_info)
 
-    body.must_equal '/'
+    body("HTTP_VERSION"=>'HTTP/1.0').must_equal '/'
     @logger.rewind
-    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ " 200 1 0.\d\d\d\d\n\z/)
+    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ HTTP\/1.0" 200 1 0.\d\d\d\d\n\z/)
 
     @logger.rewind
     @logger.truncate(0)
@@ -37,9 +37,9 @@ describe "common_logger plugin" do
     @app.plugin :common_logger, Logger.new(@logger)
     @logger.rewind
     @logger.truncate(0)
-    body.must_equal '/'
+    body("HTTP_VERSION"=>'HTTP/1.0').must_equal '/'
     @logger.rewind
-    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ " 200 1 0.\d\d\d\d\n\z/)
+    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ HTTP\/1.0" 200 1 0.\d\d\d\d\n\z/)
   end
 
   it 'skips timer information if not available' do
@@ -48,9 +48,9 @@ describe "common_logger plugin" do
       r.path_info
     end
 
-    body.must_equal '/'
+    body("HTTP_VERSION"=>'HTTP/1.0').must_equal '/'
     @logger.rewind
-    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ " 200 1 -\n\z/)
+    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ HTTP\/1.0" 200 1 -\n\z/)
   end
 
   it 'skips length information if not available' do
@@ -58,9 +58,9 @@ describe "common_logger plugin" do
       r.halt [500, {}, []]
     end
 
-    body.must_equal ''
+    body("HTTP_VERSION"=>'HTTP/1.0').must_equal ''
     @logger.rewind
-    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ " 500 - 0.\d\d\d\d\n\z/)
+    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ HTTP\/1.0" 500 - 0.\d\d\d\d\n\z/)
   end
 
   it 'does not log if an error is raised' do
@@ -84,9 +84,9 @@ describe "common_logger plugin" do
       "bad"
     end
 
-    body.must_equal 'bad'
+    body("HTTP_VERSION"=>'HTTP/1.0').must_equal 'bad'
     @logger.rewind
-    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ " 500 3 0.\d\d\d\d\n\z/)
+    @logger.read.must_match(/\A- - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ HTTP\/1.0" 500 3 0.\d\d\d\d\n\z/)
   end
 
   def cl_app_meth(&block)
@@ -104,8 +104,8 @@ describe "common_logger plugin" do
       r.halt [500, {}, []]
     end
 
-    body.must_equal ''
+    body("HTTP_VERSION"=>'HTTP/1.0').must_equal ''
     @logger.rewind
-    @logger.read.must_match(/\ADEBUG - - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ " 500 - 0.\d\d\d\d\n\z/)
+    @logger.read.must_match(/\ADEBUG - - - \[\d\d\/[A-Z][a-z]{2}\/\d\d\d\d:\d\d:\d\d:\d\d [-+]\d\d\d\d\] "GET \/ HTTP\/1.0" 500 - 0.\d\d\d\d\n\z/)
   end
 end
